tests/build_fail/bseq_fail_ident_expr_wrong_len.rs
use bit_seq::bseq;

fn main() {
    let var = 0;
    bseq!(var:wrong_len);
}